[project]
name = "skinpy"
version = "0.0.3"
description = "A Python library for Minecraft skins"
authors = [
    {name = "Tim Martin", email = "tim@timmart.in"},
    {name = "Steven Van Ingelgem", email = "steven@vaningelgem.be"},
]
dependencies = [
    "attrs",
    "numpy",
    "Pillow",
    "click",
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
skinpy = "skinpy.__main__:cli"

[project.urls]
repository = "https://github.com/t-mart/skinpy"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.292",
    "black>=23.9.1",
    "pytest>=7.4.0",
    "colorspacious>=1.1.2",
    "matplotlib>=3.8.0",
]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.pyright]
plugins = "numpy.typing.mypy_plugin"
